[CCAP-934]  Enable looping over subflows (#730)